@@ -19,6 +19,7 @@ Renamed "Frequency" to "Change Frequency" in AC Voltage Source menu.
 Renamed "Edit Capacitance" to "Change Capacitance" in capacitor menu.
 Renamed "Edit Inductance" to "Change Inductance" in inductor menu.
 Removed Zoom handler.
+Voltage Strip chart probes now work correctly at different zoom levels.
 Bugs fixed in 3.04.09 bug report [1-12, 14-15, 18,21,22,23,24]
 Bugs recommended but skipped[16,  
 
